0.6.0
* removed `Atom#getRadicalValue()` since we also have `Atom#getRadical()`
* more improvements to CTFileCleaner now includes atom block cleanup
* First work on `ChemicalDataStore`
* Added a few more methods to `ChemcialReaderFactory` with format paramater

0.5.9
* fixed spacing in CTFileCleaner STY lines which broke JSdraw

0.5.8
1. CTFileCleaner enhancements to add clean up for DAT Sgroups

0.5.7
1. CTFileCleaner bug fixes




0.5.2

1. Added MolSearch and MolSearchFactory to do GraphIsoMorphism searches.
2.  Bug fixes